<resources>
    <string name="app_name">LearnOpenGL</string>
    <string name="triangle">三角形</string>
    <string name="square">正方形</string>
    <string name="colorful_triangle">彩色三角形</string>
    <string name="texture_square">有纹理的正方形</string>
    <string name="cube">立方体</string>
    <string name="nanosuit">3D孤岛危机纳米装</string>
    <string name="blur">背景模糊</string>
    <string name="gl_canvas">GLCanvas</string>
</resources>
