<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="me.light.learnopengl.MainActivity">

    <Button
            android:id="@+id/btn_triangle"
            android:text="@string/triangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <Button
            android:id="@+id/btn_square"
            android:text="@string/square"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <Button
            android:id="@+id/btn_colorful_triangle"
            android:text="@string/colorful_triangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <Button
            android:id="@+id/btn_texture_square"
            android:text="@string/texture_square"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <Button
            android:id="@+id/btn_cube"
            android:text="@string/cube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <Button
            android:id="@+id/btn_nanosuit"
            android:text="@string/nanosuit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <Button
            android:id="@+id/btn_blur"
            android:text="@string/blur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <Button
            android:id="@+id/btn_gl_canvas"
            android:text="@string/gl_canvas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

</LinearLayout>
